# CrackMaster

./: .gitignore  buildozer.spec  messages.pot  pyproject.toml
app/: app.py  main.py
core/: facts.py  logic.py  settings.py
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/ru/LC_MESSAGES/: messages.mo  messages.po
ui/: interface.py
