[project]
name = "crackmaster"
version = "0.1.0"
description = ""
authors = [
    {name = "saikonohack",email = "saintklovus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "plyer (>=2.1.0,<3.0.0)",
    "babel (>=2.17.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
